--- a/_includes/page_header.html
+++ b/_includes/page_header.html
@@ -1,7 +1,7 @@
 {% if include.header_css_class %}
   {% assign header_css_class = include.header_css_class %}
 {% else %}
-  {% assign header_css_class = 'page-hdr-2' %}
+  {% assign header_css_class = 'page-header-2' %}
 {% endif %}
 
 {% if include.header_title %}
