--- a/_includes/testimonial_cta.html
+++ b/_includes/testimonial_cta.html
@@ -1,5 +1,5 @@
 <div class="page-subfooter">
-  <div class="container">
+  <div class="testimonial">
     <div class="testimonial-row">
       <div class="testimonial-col">
         <blockquote>
