--- a/_layouts/policy.html
+++ b/_layouts/policy.html
@@ -5,11 +5,9 @@ layout: default
 {% include page_header.html %}
 
 <div class="policy">
-  <div class="container">
-    <div class="row">
-      <div class="policy-content-col">
-        {{content}}
-      </div>
+  <div class="policy-row">
+    <div class="policy-col">
+      {{content}}
     </div>
   </div>
 </div>
