--- a/_includes/carry_culture_cta.html
+++ b/_includes/carry_culture_cta.html
@@ -1,7 +1,7 @@
 {% include cta.html
   header = "Become a culture carrier."
-  content = "Join our team of talented technologists working together to cultivate an incredible culture."
-  content_css_class = "page-subfooter-content-col"
+  text = "Join our team of talented technologists working together to cultivate an incredible culture."
+  text_css_class = "page-subfooter-text-col"
   cta_path = "/join/"
   cta = "Join Skylight"
   icon_css_class = "fa fa-arrow-right"
