--- a/_includes/cta.html
+++ b/_includes/cta.html
@@ -1,14 +1,14 @@
 <footer class="page-subfooter">
-  <div class="container">
+  <div class="page-subfooter-content">
     <div class="page-subfooter-header-row">
       <div class="page-subfooter-header-col">
         <h3 class="header-display-3">{{include.header}}</h3>
       </div>
     </div>
 
-    <div class="page-subfooter-content-row">
-      <div class="{{include.content_css_class}}">
-        <p>{{include.content}}</p>
+    <div class="page-subfooter-text-row">
+      <div class="{{include.text_css_class}}">
+        <p>{{include.text}}</p>
       </div>
     </div>
 
