--- a/_includes/filter.html
+++ b/_includes/filter.html
@@ -11,46 +11,44 @@
 {% capture filter_title_markup %} <h2 class="filter-title">{{filter_title}}</h2> {% endcapture %}
 
 <div class="filter">
-  <div class="container">
-    <h1>{{filter_header}}</h1>
-    <div class="row">
-      <div class="filter-col">
-        <header class="filter-header">
-          {% if context == 'employee' %}
-            <img class="filter-image" src="{{filter_image}}" alt="{{filter_image_description}}">
-             <div class="filter-title-wrapper filter-employee">
-               {{filter_title_markup}}
-               <h3 class="filter-subtitle">{{filter_subtitle}}</h3>
-             </div>
-          {% else %}
-            <div class="filter-title-wrapper">{{filter_title_markup}}</div>
-          {% endif %}
-
-          <div class="filter-count">{{filter_count}}</div>
-        </header>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="filter-col">
-        {% if filtered_items.size > 0 %}
-          {% for filtered_item in filtered_items %}
-            <article class="filter-item">
-              <h2 class="filter-item-title header-display-5">
-                <a class="filter-item-link" href="{{filtered_item.permalink}}">{{filtered_item.title}}</a>
-              </h2>
-              {% if filtered_item.subtitle %}
-                {% assign filtered_item_desc = filtered_item.subtitle %}
-              {% else %}
-                {% assign filtered_item_desc = filtered_item.excerpt %}
-              {% endif %}
-              <p class="filter-item-description">{{filtered_item_desc}}</p>
-            </article>
-          {% endfor %}
+  <h1>{{filter_header}}</h1>
+  <div class="filter-row">
+    <div class="filter-col">
+      <header class="filter-header">
+        {% if context == 'employee' %}
+          <img class="filter-image" src="{{filter_image}}" alt="{{filter_image_description}}">
+           <div class="filter-title-wrapper filter-employee">
+             {{filter_title_markup}}
+             <h3 class="filter-subtitle">{{filter_subtitle}}</h3>
+           </div>
         {% else %}
-          <p class="filter-no-results">{{filter_no_results}}</p>
+          <div class="filter-title-wrapper">{{filter_title_markup}}</div>
         {% endif %}
-      </div>
+
+        <div class="filter-count">{{filter_count}}</div>
+      </header>
+    </div>
+  </div>
+
+  <div class="filter-row">
+    <div class="filter-col">
+      {% if filtered_items.size > 0 %}
+        {% for filtered_item in filtered_items %}
+          <article class="filter-item">
+            <h2 class="filter-item-title header-display-5">
+              <a class="filter-item-link" href="{{filtered_item.permalink}}">{{filtered_item.title}}</a>
+            </h2>
+            {% if filtered_item.subtitle %}
+              {% assign filtered_item_desc = filtered_item.subtitle %}
+            {% else %}
+              {% assign filtered_item_desc = filtered_item.excerpt %}
+            {% endif %}
+            <p class="filter-item-description">{{filtered_item_desc}}</p>
+          </article>
+        {% endfor %}
+      {% else %}
+        <p class="filter-no-results">{{filter_no_results}}</p>
+      {% endif %}
     </div>
   </div>
 </div>
