--- a/_includes/hire_us_cta.html
+++ b/_includes/hire_us_cta.html
@@ -1,7 +1,7 @@
 {% include cta.html
   header = "Let's get to work."
-  content = "Have a bold idea or unsolvable problem? We’d love to hear about it."
-  content_css_class = "page-subfooter-content-col-narrow"
+  text = "Have a bold idea or unsolvable problem? We’d love to hear about it."
+  text_css_class = "page-subfooter-text-col-narrow"
   cta_path = "/hire-us/"
   cta = "Contact Us"
   icon_css_class = "fa fa-arrow-right"
