--- a/_includes/intro_cta.html
+++ b/_includes/intro_cta.html
@@ -1,7 +1,7 @@
 {% include cta.html
   header = "Introduce yourself."
-  content = "Interested in Skylight, but not ready to apply? Get on our radar by dropping us an email."
-  content_css_class = "page-subfooter-content-col"
+  text = "Interested in Skylight, but not ready to apply? Get on our radar by dropping us an email."
+  text_css_class = "page-subfooter-text-col"
   cta_path = "mailto:hello@skylight.digital"
   cta = "Email Us"
   icon_css_class = "fa fa-at"
