--- a/_includes/join_us_cta.html
+++ b/_includes/join_us_cta.html
@@ -1,7 +1,7 @@
 {% include cta.html
   header = "Change lives every day."
-  content = "We need great technologists, designers, and more to work on changing how the government serves the public."
-  content_css_class = "page-subfooter-content-col"
+  text = "We need great technologists, designers, and more to work on changing how the government serves the public."
+  text_css_class = "page-subfooter-text-col"
   cta_path = "/join/"
   cta = "Join Us"
   icon_css_class = "fa fa-arrow-right"
