--- a/_sass/pages/_alliances.scss
+++ b/_sass/pages/_alliances.scss
@@ -1,5 +1,10 @@
 .alliances {
   @extend %page-main-base;
+  @extend %container;
+}
+
+.alliances-row {
+  @extend %row;
 }
 
 .alliances-contact-col {
