--- a/_sass/pages/_filter.scss
+++ b/_sass/pages/_filter.scss
@@ -1,4 +1,5 @@
 .filter {
+  @extend %container;
   @extend %mt-7;
 
   h1 {
@@ -7,6 +8,10 @@
     @extend %mb-md-5;
     @extend %sr-only;
   }
+}
+
+.filter-row {
+  @extend %row;
 }
 
 .filter-col {
