--- a/_sass/pages/_policy.scss
+++ b/_sass/pages/_policy.scss
@@ -1,7 +1,12 @@
 .policy {
   @extend %page-main-base;
+  @extend %container;
 }
 
-.policy-content-col {
-  @extend %narrative;
+.policy-row {
+  @extend %row;
+}
+
+.policy-col {
+  @extend %narrative-col;
 }
