modify page header block spacing

--- a/_sass/_placeholders.scss
+++ b/_sass/_placeholders.scss
@@ -53,6 +53,7 @@
 %m-0 { @extend .m-0; }
 %mx-0 { @extend .mx-0; }
 %my-3 { @extend .my-3; }
+%my-5 { @extend .my-5; }
 
 %pt-2 { @extend .pt-2; }
 %pt-4 { @extend .pt-4; }
