--- a/_sass/pages/_common.scss
+++ b/_sass/pages/_common.scss
@@ -1,8 +1,7 @@
 %page-header-base {
   @extend %container;
   @extend %text-center;
-  @extend %mt-5;
-  @extend %mb-5;
+  @extend %my-5;
 }
 
 .page-header-1 {
