add hubzone logo, modify footer links, add hover effect to service icon link

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -126,9 +126,7 @@
      "foundingDate": "2016",
      "founders": [
         { "@type": "Person", "name": "Sean Johnson" },
-        { "@type": "Person", "name": "" },
-        { "@type": "Person", "name": "" },
-        { "@type": "Person", "name": "" }
+        { "@type": "Person", "name": "Chris Cairns" }
       ],
      "address": {
        "@type": "PostalAddress",
@@ -140,7 +138,7 @@
      "contactPoint": {
        "@type": "ContactPoint",
        "contactType": "sales",
-       "telephone": "",
+       "telephone": "267-228-1390",
        "email": "hello@skylight.digital"
      },
      "sameAs": [
