--- a/_sass/layout/_footer.scss
+++ b/_sass/layout/_footer.scss
@@ -24,7 +24,7 @@
   @extend %footer-col-left-base;
 
   a {
-    @include logo($height: 40px);
+    @include logo($height: 40px, $version: 'logo');
   }
 }
 
