--- a/_sass/pages/_services.scss
+++ b/_sass/pages/_services.scss
@@ -24,6 +24,13 @@
   @extend %text-center;
   cursor: pointer;
   height: 100%;
+
+  &:hover,
+  &:focus {
+    a {
+      color: $link-hover-color;
+    }
+  }
 }
 
 .service-area-img {
