--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,10 +8,9 @@
 
       <nav class="footer-nav-col">
         <ul>
-          <li><a href="/guilds/">Guilds</a></li>
-          <li><a href="/guides/">Guides</a></li>
+          <li><a href="/hire-us/">Hire Us</a></li>
+          <li><a href="/join-us/">Join Us</a></li>
           <li><a href="/alliances/">Alliances</a></li>
-          <li><a href="/press/">Press</a></li>
           <li><a href="/policies/">Policies</a></li>
         </ul>
       </nav>
