remove all guides related code (for now)

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -149,7 +149,7 @@
     }
   </script>
 
-  {% if content_type == 'Article' or content_type == 'BlogPosting' %}
+  {% if content_type == 'BlogPosting' %}
     {% assign wordcount = page.content | number_of_words %}
     {% assign body = page.content | xml_escape | strip_newlines %}
     {% assign contributors = page.contributors %}
