modify source order of content on join page using flex order

--- a/_sass/_placeholders.scss
+++ b/_sass/_placeholders.scss
@@ -27,6 +27,7 @@
 %justify-content-end { @extend .justify-content-end; }
 %align-self-center { @extend .align-self-center; }
 %flex-column { @extend .flex-column; }
+%flex-last { @extend .flex-last; }
 
 %mt-3 { @extend .mt-3; }
 %mt-4 { @extend .mt-4; }
