--- a/_includes/card_list.html
+++ b/_includes/card_list.html
@@ -20,7 +20,7 @@
     {% for item in collection | limit: limit %}
       <article class="{{prefix}}-col">
         <div class="{{prefix}}-card card-link" data-href="{{item.permalink}}">
-          <img class="{{prefix}}-img" src="{{item.image}}" alt="{{item.image_description}}">
+          <div role="img" class="{{prefix}}-img" style="background-image: url({{item.image}});" title="{{item.image_description}}"></div>
           <div class="{{prefix}}-block">
             <h3 class="{{prefix}}-title {{context}}">{{item.title}}</h3>
             <p class="{{prefix}}-text">{{item.excerpt}}</p>
