--- a/_sass/pages/_project.scss
+++ b/_sass/pages/_project.scss
@@ -72,6 +72,10 @@
   @extend %project-aside-base;
   @extend %list-inside;
 
+  ul {
+    @extend %list-unstyled;
+  }
+
   a {
     @include link-decoration($project-aside-link-color, $project-aside-link-hover-color,
       $project-aside-link-border, $project-aside-link-border-hover);
