add case studies for ads and agile framework

--- a/_sass/_placeholders.scss
+++ b/_sass/_placeholders.scss
@@ -67,6 +67,7 @@
 %pl-1 { @extend .pl-1; }
 %p-0 { @extend .p-0; }
 %p-2 { @extend .p-2; }
+%p-3 { @extend .p-3; }
 %px-0 { @extend .px-0; }
 %px-3 { @extend .px-3; }
 %py-2 { @extend .py-2; }
