add case mgmt blog post

--- a/_sass/_placeholders.scss
+++ b/_sass/_placeholders.scss
@@ -54,6 +54,7 @@
 %m-0 { @extend .m-0; }
 %mx-0 { @extend .mx-0; }
 %my-3 { @extend .my-3; }
+%my-4 { @extend .my-4; }
 %my-5 { @extend .my-5; }
 
 %pt-2 { @extend .pt-2; }
@@ -138,3 +139,9 @@
 
 %badge { @extend .badge; }
 %badge-default { @extend .badge-default; }
+
+%table { @extend .table; }
+%table-bordered { @extend .table-bordered; }
+%table-responsive { @extend .table-responsive; }
+
+%blockquote { @extend .blockquote; }
