misc improvements and fixes

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
       <nav class="footer-nav-col">
         <ul>
           <li><a href="/hire-us/">Hire Us</a></li>
-          <li><a href="/join-us/">Join Us</a></li>
+          <li><a href="/join/">Join Us</a></li>
           <li><a href="/alliances/">Alliances</a></li>
           <li><a href="/policies/">Policies</a></li>
         </ul>
