--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -142,6 +142,8 @@ $font-size-lg: $font-size-large;
 $font-size-sm: $font-size-xx-small;
 $font-size-xs: $font-size-xxx-small;
 
+$line-height-base: 1.7;
+
 $font-size-h1: 3.75rem;
 $font-size-h2: 3rem;
 $font-size-h3: 2.75rem;
